@@ -12,7 +12,7 @@ define("CL_CONFIG", "standard");
 define("CL_VERSION", 1.0);
 define("CL_PUBDATE","1351724400");
 // uncomment for debugging
-//error_reporting(E_ALL | E_STRICT);
+error_reporting(E_ALL | E_STRICT);
 // include config file , pagination and global functions
 require(CL_ROOT . "/config/" . CL_CONFIG . "/config.php");
 require(CL_ROOT . "/include/SmartyPaginate.class.php");
